<resources>
    <string name="app_name">19SOEIT13801</string>
    <string name="Vasu">Vasu</string>
    <string name="txtHeader">19SOEIT13801</string>
    <string name="Atulbhai">Atulbhai</string>
    <string name="Mathukiya">Mathukiya</string>
    <string name="abc_123">abc@123</string>
    <string name="vmathukiya183_rku_ac_in">vmathukiya183@rku.ac.in</string>
    <string name="male">Male</string>
    <string name="dhoraji">Dhoraji</string>
    <string name="_1234567890">1234567890</string>
    <string name="lblAboutUs">About Us</string>
    <string name="todo">TODO</string>
</resources>